# OpenGL

./: .clang-tidy  .gitignore  CMakeLists.txt  build.sh  compile_commands.json  premake5.lua
src/: ShaderClass.hpp  main.cpp
